# swiggy-top3_recom

./: Makefile  README.md  data.dvc  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
swiggy_top3_recom/: __init__.py  config.py  dataset.py  features.py  plots.py
swiggy_top3_recom/modeling/: predict.py  train.py
