[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "swiggy_top3_recom"
version = "0.0.1"
description = "This project will help recommend top 3 food items on swiggy home page"
authors = [
  { name = "Sagar Raturi" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["swiggy_top3_recom"]
force_sort_within_sections = true
